Website: fix calendar visibility in dark mode
This fixes a bug that made parts of the interactive calendar unreadable
in dark mode, especially if you hovered over the days with the mouse.

Thanks to Jad Elmoghraby for pointing this out!

--- a/website/res/css/style.css
+++ b/website/res/css/style.css
@@ -947,4 +947,22 @@ strong {
 	.collapsible-header .collapsible-icon {
 		color: var(--primary);
 	}
+
+	.fc-list-event:hover td {
+		background-color: rgba(255, 255, 255, 0.1) !important;
+	}
+
+	.fc-list-event-graphic {
+		color: inherit !important;
+	}
+
+	.fc-list-day-cushion {
+		background-color: var(--gray-dark) !important;
+		color: var(--primary) !important;
+	}
+
+	.fc-list-day-text,
+	.fc-list-day-side-text {
+		color: var(--primary) !important;
+	}
 }
